Update html file & add image
Puts nearly up to date resume in html file and adds a headshot

CS316 Project 1

--- a/CS316/projects/project1/ben-richey.html
+++ b/CS316/projects/project1/ben-richey.html
@@ -6,5 +6,73 @@
         <title>Ben Richey</title>
     </head>
     <body>
+        <header>
+        <h1>Ben Richey</h1>
+        <img src="images/headshot.PNG" alt="A picture of myself" title="Ben Richey Headshot"
+        width="500"/>
+        <cite>Photo by Morgan Snellings. Instagram: @morgansnellingsphotography</cite>
+            <h3>Email: bbri226@g.uky.edu | LinkedIn: Ben Richey | GPA: 3.765</h3>
+            <p>Junior at the University of Kentucky majoring in Computer Engineering. I am currently
+               seeking out as many opportunities as I can in the fields of computer science and
+               engineering to see what interests me and gain experience. I am solution-oriented and
+               have a passion for developing robust projects with a team.
+        </header>
+        <hr>
+        <div>
+            <h2>Experience</h2>
+            <ol>
+                <li><h3>May 2020 to Present</h3></li>
+                <h4>Co-Op Software Developer, Badger Technolgies/Jabil Inc.</h4>
+                <ul>
+                    <li>Robot Operating System (ROS) team developer for Marty the Robot: an AI
+                        Retail Robot</li>
+                    <li>Proficient w/ Linux/Unix Operating System as Development Environment</li>
+                    <li>Experience debugging complex/unfamiliar code</li>
+                    <li>Developed bug fixes currently in production on all Badger robots</li>
+                    <li>Experience with git and GitHub</li>
+                </ul>
+                <li><h3>July 2019 to May 2020</h3></li>
+                <h4>Co-Op Moderation Team Lead, Badger Technologies/Jabil Inc.</h4>
+                <ul>
+                    <li>Analyzed and corrected decisions made by AI</li>
+                    <li>Aided in development of website and method to analyze retail store data</li>
+                    <li>Scheduled, organized, and trained a team of engineers and interns</li>
+                </ul>
+            </ol>
+        </div>
+        <hr>
+        <div>
+            <h2>Education</h2>
+            <h3>2019 to Present</h3>
+            <h4>Univ. of Kentucky College of Engineering Bachelor of Science in Computer
+                Engineering</h4>
+            <ul>
+                <li>Intro to Software Engineering Techniques (C++, Linux/Unix, Algorithm
+                    Design)</li>
+                <li>Discrete Mathematics</li>
+                <li>Intro to Digital Logic Circuits</li>
+                <li>Intro to Program Design, Abstraction, and Problem Solving (C++, Algorithm 
+                    Design)</li>
+                <li>First Year Engineering I/II (MATLAB, circuits, project management)</li>
+            </ul>
+            <h4>Scholarships & Awards</h4>
+            <ul>
+                <li>Provost Scholarship: $20,000 over 4 years</li>
+                <li>KEES Scholarship: $10,000 over 4 years</li>
+                <li>Deans List Spring 2020/2021</li>
+                <li>High School Valedictorian</li>
+            </ul>
+        </div>
+        <hr>
+        <div>
+            <h2>Skills</h2>
+            <ul>
+                <li>Programming: Python, C++, C, Bash, Saltstack, MATLAB</li>
+                <li>Linux (Ubuntu) and Microsoft Windows</li>
+                <li>Agile/Kanban Software Development</li>
+                <li>Debugging complex and unfamiliar systems</li>
+                <li>Proficient with git and GitHub</li>
+            </ul>
+        </div>
     </body>
 </html>
