--- a/CS316/projects/project1/ben-richey.html
+++ b/CS316/projects/project1/ben-richey.html
@@ -8,85 +8,186 @@
     <body>
         <header>
             <h1>Ben Richey</h1>
-            <img src="images/headshot.PNG" alt="A picture of myself" title="Ben Richey Headshot"
-            width="300"/>
-            <cite>Photo by <a href="https://www.morgansnellingsphotography.com">Morgan Snellings</a>
-                . Instagram: <a href="https://www.instagram.com/morgansnellingsphotography">
-                    @morgansnellingsphotography</a></cite>
-            <h3>Email: <a href="mailto:bbri226@g.uky.edu">bbri226@g.uky.edu</a> | <a href=
-                   "https://www.linkedin.com/in/ben-richey-0b967a18a">LinkedIn</a> | GPA: 3.765</h3>
-            <p>Junior at the University of Kentucky majoring in Computer Engineering. I am currently
-               seeking out as many opportunities as I can in the fields of computer science and
-               engineering to see what interests me and gain experience. I am solution-oriented and
-               have a passion for developing robust projects with a team.</p>
+            <figure>
+                <img src="images/headshot.PNG" alt="A picture of myself" title="Ben Richey Headshot"
+                width="300"/>
+                <figcaption>
+                    <cite>Photo by <a href="https://www.morgansnellingsphotography.com">
+                            Morgan Snellings</a>. Instagram:
+                        <a href="https://www.instagram.com/morgansnellingsphotography">
+                        @morgansnellingsphotography</a></cite>
+                </figcaption>
+            </figure>
         </header>
         <main>
-            <hr>
-            <section id="experience">
-                <h2>Experience</h2>
-                <section class="job">
-                    <h3>May 2020 to Present</h3>
-                    <h4>Co-Op Software Developer, Badger Technolgies/Jabil Inc.</h4>
+            <details>
+                <summary><strong>My Resume</strong></summary>
+                <section class="page">
+                    <h2>Resume</h2>
+                    <hr>
+                    <section id="about" class="subsection">
+                        <h3>Email: <a href="mailto:bbri226@g.uky.edu">bbri226@g.uky.edu</a> |
+                            <a href="https://www.linkedin.com/in/ben-richey-0b967a18a">LinkedIn</a>
+                            | GPA: 3.765
+                        </h3>
+                        <p>Junior at the University of Kentucky majoring in Computer Engineering and
+                           part-time software developer intern at Badger Technologies. I am
+                           currently seeking out as many opportunities as I can in the fields of
+                           computer science and engineering to see what interests me and gain
+                           experience. I am solution-oriented and have a passion for developing
+                           robust projects with a team.
+                        </p>
+                    </section>
+                    <hr>
+                    <section id="experience" class="subsection">
+                        <h2>Experience</h2>
+                        <section class="job">
+                            <h3>May 2020 to Present</h3>
+                            <h4>Co-Op Software Developer, Badger Technolgies/Jabil Inc.</h4>
+                            <ul>
+                                <li>Robot Operating System (ROS) team developer for Marty the Robot:
+                                    an AI Retail Robot</li>
+                                <li>Proficient w/ Linux/Unix Operating System as Development
+                                    Environment</li>
+                                <li>Experience debugging complex/unfamiliar code</li>
+                                <li>Developed bug fixes currently in production on all Badger robots
+                                </li>
+                                <li>Experience with git and GitHub</li>
+                            </ul>
+                        </section>
+                        <section class="job">
+                            <h3>July 2019 to May 2020</h3>
+                            <h4>Co-Op Moderation Team Lead, Badger Technologies/Jabil Inc.</h4>
+                            <ul>
+                                <li>Analyzed and corrected decisions made by AI</li>
+                                <li>Aided in development of website and method to analyze retail
+                                    store data</li>
+                                <li>Scheduled, organized, and trained a team of engineers and
+                                    interns
+                                </li>
+                            </ul>
+                        </section>
+                    </section>
+                    <hr>
+                    <section id="education" class="subsection">
+                        <h2>Education</h2>
+                        <h3>2019 to Present</h3>
+                        <section id="bachelors">
+                            <h4>Univ. of Kentucky College of Engineering Bachelor of Science in
+                                Computer Engineering</h4>
+                            <h4>Relevant Courses</h4>
+                            <ul>
+                                <li>Computer Organization (MIPS ISA, Verilog)</li>
+                                <li>Algorithm Design/Analysis</li>
+                                <li>Web Programming</li>
+                                <li>AC Circuits</li>
+                                <li>Systems Programming (Unix/Linux, C)</li>
+                                <li>DC Circuits</li>
+                                <li>Intro to Embedded Systems (ARM ISA)</li>
+                                <li>Engineering Statistics</li>
+                                <li>Intro to Software Engineering Techniques (C++, Linux/Unix,
+                                    Algorithm Design)</li>
+                                <li>Discrete Mathematics</li>
+                                <li>Intro to Digital Logic Circuits</li>
+                                <li>Intro to Program Design, Abstraction, and Problem Solving (C++,
+                                    Algorithm Design)</li>
+                                <li>First Year Engineering I/II (MATLAB, circuits, project
+                                    management)
+                                </li>
+                            </ul>
+                        </section>
+                        <section id="awards">
+                            <h4>Scholarships & Awards</h4>
+                            <ul>
+                                <li>Provost Scholarship: $20,000 over 4 years</li>
+                                <li>KEES Scholarship: $10,000 over 4 years</li>
+                                <li>Deans List Spring 2020/2021</li>
+                                <li>High School Valedictorian</li>
+                            </ul>
+                        </section>
+                    </section>
+                    <hr>
+                    <section id="skills" class="subsection">
+                        <h2>Skills</h2>
+                        <ul>
+                            <li>Programming:
+                                <ul>
+                                    <li>Python</li>
+                                    <li>C</li>
+                                    <li>C++</li>
+                                    <li>ARM Assembly</li>
+                                    <li>x86_64 Assembly</li>
+                                    <li>Bash</li>
+                                    <li>Saltstack</li>
+                                    <li>MATLAB</li>
+                                </ul>
+                            </li>
+                            <li>Testing (Integration and Unit)</li>
+                            <li>Linux (Ubuntu) and Microsoft Windows</li>
+                            <li>Agile/Kanban Software Development</li>
+                            <li>Debugging complex and unfamiliar systems</li>
+                            <li>Proficient with git and GitHub</li>
+                        </ul>
+                    </section>
+                </section>
+            </details>
+            <details>
+                <summary><strong>My Work</strong></summary>
+                <section class="page">
+                    <h2>Projects, Code, and Whatnot</h2>
+                    <hr>
+                    <section class="subsection">
+                        <h3><a href="https://github.com/BenRichey2">GitHub</a></h3>
+                    </section>
+                </section>
+            </details>
+            <details>
+                <summary><strong>My Interests</strong></summary>
+                <section class="page">
+                    <h2>Interests</h2>
+                    <hr>
+                    <section id="professional" class="subsection">
+                        <h3>Professional Interests</h3>
+                    </section>
+                    <hr>
+                    <section id="personal" class="subsection">
+                        <h3>Personal Interests</h3>
+                    </section>
+                </section>
+            </details>
+            <details>
+                <summary><strong>Contact Me!</strong></summary>
+                <section class="page">
+                    <h2>Contact</h2>
                     <ul>
-                        <li>Robot Operating System (ROS) team developer for Marty the Robot: an AI
-                            Retail Robot</li>
-                        <li>Proficient w/ Linux/Unix Operating System as Development
-                            Environment</li>
-                        <li>Experience debugging complex/unfamiliar code</li>
-                        <li>Developed bug fixes currently in production on all Badger robots</li>
-                        <li>Experience with git and GitHub</li>
+                        <li><p>
+                            Email: <a href="mailto:bbri226@g.uky.edu">bbri226@g.uky.edu</a>
+                            </p>
+                        </li>
+                        <li><p>
+                                <a href="https://www.linkedin.com/in/ben-richey-0b967a18a">LinkedIn
+                                </a>
+                            </p>
+                        </li>
                     </ul>
                 </section>
-                <section class="job">
-                    <h3>July 2019 to May 2020</h3>
-                    <h4>Co-Op Moderation Team Lead, Badger Technologies/Jabil Inc.</h4>
-                    <ul>
-                        <li>Analyzed and corrected decisions made by AI</li>
-                        <li>Aided in development of website and method to analyze retail store
-                            data</li>
-                        <li>Scheduled, organized, and trained a team of engineers and interns</li>
-                    </ul>
+            </details>
+            <details>
+                <summary><strong>The Office Quote of the Day</strong></summary>
+                <section class="page">
+                    <h2>The Office Quote of the Day</h2>
+                    <p class="about">The Office is my favorite TV show! Here's a daily quote that is
+                                       one of my favorites. Eventually I will turn this into a random
+                                       The Office quote generator which will select a random quote from
+                                       a list of my favorites.</p>
+                    <figure class="quote">
+                        <p>"I never smile if I can help it. Showing one's teeth is a submission signal
+                        in primates. When someone smiles at me, all I see is a chimpanzee begging for
+                        its life."<p>
+                        <figcaption>-Dwight Schrute, The Office, Season 2 Episode 21</figcaption>
+                    </figure>
                 </section>
-            </section>
-            <hr>
-            <section id="education">
-                <h2>Education</h2>
-                <h3>2019 to Present</h3>
-                <section id="bachelors">
-                    <h4>Univ. of Kentucky College of Engineering Bachelor of Science in Computer
-                        Engineering</h4>
-                    <h4>Relevant Courses</h4>
-                    <ul>
-                        <li>Intro to Software Engineering Techniques (C++, Linux/Unix, Algorithm
-                            Design)</li>
-                        <li>Discrete Mathematics</li>
-                        <li>Intro to Digital Logic Circuits</li>
-                        <li>Intro to Program Design, Abstraction, and Problem Solving (C++,
-                            Algorithm Design)</li>
-                        <li>First Year Engineering I/II (MATLAB, circuits, project management)</li>
-                    </ul>
-                </section>
-                <section id="awards">
-                    <h4>Scholarships & Awards</h4>
-                    <ul>
-                        <li>Provost Scholarship: $20,000 over 4 years</li>
-                        <li>KEES Scholarship: $10,000 over 4 years</li>
-                        <li>Deans List Spring 2020/2021</li>
-                        <li>High School Valedictorian</li>
-                    </ul>
-                </section>
-            </section>
-            <hr>
-            <section id="skills">
-                <h2>Skills</h2>
-                <ul>
-                    <li>Programming: Python, C++, C, Bash, Saltstack, MATLAB</li>
-                    <li>Linux (Ubuntu) and Microsoft Windows</li>
-                    <li>Agile/Kanban Software Development</li>
-                    <li>Debugging complex and unfamiliar systems</li>
-                    <li>Proficient with git and GitHub</li>
-                </ul>
-            </section>
+            </details>
         </main>
     </body>
 </html>
