Update "Interests" tab
Added content for the interests tab for me to feature topics I am
interested in personally and professionally.

CS316 Project 1

--- a/CS316/projects/project1/ben-richey.html
+++ b/CS316/projects/project1/ben-richey.html
@@ -148,10 +148,67 @@
                     <hr>
                     <section id="professional" class="subsection">
                         <h3>Professional Interests</h3>
+                        <section class="subfield">
+                            <h4>Robotics</h4>
+                            <p>I currently work for a robotics company, and my experience has given
+                            me a passion for learning about autonomous navigation. This is a really
+                            complex field which requires many layers of code to achieve this goal.
+                            Putting an autonomous robot in a retail space adds another large layer
+                            of complexity to the mix, as the robot has to be especially careful not
+                            to hit people. However, if the robot is too careful, it can get to the
+                            point where it just doesn't move at all because people are moving around
+                            it. This is a very common issue with companies developing autonomous
+                            retail robots.
+                            </p>
+                            <p>The field of autonomous navigation is a very diverse and constantly
+                            changing one. This is why it is of particular interest to me.
+                            Self-driving cars, retail robots, warehouse robots, security robots,
+                            vacuum robots, aerial drones, self-driving boats, and many more
+                            sub-fields fall into this category. Each has their own set of unique
+                            issues, all of which I am fascinated by.
+                            </p>
+                        </section>
+                        <section class="subfield">
+                            <h4>Medical Technology</h4>
+                            <p>As a follower of Christ, it's really important to me that what I do
+                            helps people who need it. There are so many incredible opportunities in
+                            the field of medicine for a person with computer hardware/software
+                            development experience and know-how. I would love to do work or research
+                            for developing products that will help save the lives of others.
+                            </p>
+                            <p>In particular, I am very interested in continuous glucose monitoring
+                            (CGM) and electronic insulin pumps used to treat diabetes. These devices
+                            are quite amazing because they can save lives of people with diabetes
+                            and also improve their ability to keep their blood sugar at healthy
+                            levels which improves their A1C and overall health. As amazing as these
+                            devices are, there is also still a lot of room for improvement and I
+                            would love the opportunity to aid in this.
+                            </p>
+                        </section>
                     </section>
                     <hr>
                     <section id="personal" class="subsection">
                         <h3>Personal Interests</h3>
+                        <section class="subfield">
+                            <h4>Mountain Biking</h4>
+                            <figure>
+                                <img src="images/MTB.PNG"
+                                     alt="Me catching some air on an MTB trail." title="MTB Jump"
+                                     width="250"/>
+                                <figcaption>
+                                    Me mid-air hitting a small jump on a local-trail.
+                                </figcaption>
+                            </figure>
+                            <p>I love mountain biking! I have a Diamondback Hook hardtail mountain
+                            bike with 27.5" wheels. I live in Kentucky where, compared to states
+                            like California or Colorado, there aren't very many miles of trails to
+                            ride. However, there are some local trails nearby that I love! I don't
+                            get to ride much, but when I do, I get to relax and focus all of my
+                            efforts on something other than work/school. This is a sport that
+                            consumes your entire mind, so there's no room for stressful thoughts of
+                            work to be done in the back of your head.
+                            </p>
+                        </section>
                     </section>
                 </section>
             </details>
