Improve section class labeling & update skills
I am creating a hierarchy of <section> classes for future use when I
style my web page. The hierarchy is as such: page>subsection>subfield. I
plan to create a style format that will be the same for each of these
hierarchies.

CS316 Project 1

--- a/CS316/projects/project1/ben-richey.html
+++ b/CS316/projects/project1/ben-richey.html
@@ -41,7 +41,7 @@
                     <hr>
                     <section id="experience" class="subsection">
                         <h2>Experience</h2>
-                        <section class="job">
+                        <section class="subfield">
                             <h3>May 2020 to Present</h3>
                             <h4>Co-Op Software Developer, Badger Technolgies/Jabil Inc.</h4>
                             <ul>
@@ -55,7 +55,7 @@
                                 <li>Experience with git and GitHub</li>
                             </ul>
                         </section>
-                        <section class="job">
+                        <section class="subfield">
                             <h3>July 2019 to May 2020</h3>
                             <h4>Co-Op Moderation Team Lead, Badger Technologies/Jabil Inc.</h4>
                             <ul>
@@ -72,7 +72,7 @@
                     <section id="education" class="subsection">
                         <h2>Education</h2>
                         <h3>2019 to Present</h3>
-                        <section id="bachelors">
+                        <section id="bachelors" class="subfield">
                             <h4>Univ. of Kentucky College of Engineering Bachelor of Science in
                                 Computer Engineering</h4>
                             <h4>Relevant Courses</h4>
@@ -96,7 +96,7 @@
                                 </li>
                             </ul>
                         </section>
-                        <section id="awards">
+                        <section id="awards" class="subfield">
                             <h4>Scholarships & Awards</h4>
                             <ul>
                                 <li>Provost Scholarship: $20,000 over 4 years</li>
@@ -127,6 +127,7 @@
                             <li>Agile/Kanban Software Development</li>
                             <li>Debugging complex and unfamiliar systems</li>
                             <li>Proficient with git and GitHub</li>
+                            <li>Proficient w/ ROS Middleware Framework</li>
                         </ul>
                     </section>
                 </section>
@@ -199,8 +200,7 @@
                                     Me mid-air hitting a small jump on a local-trail.
                                 </figcaption>
                             </figure>
-                            <p>I love mountain biking! I have a Diamondback Hook hardtail mountain
-                            bike with 27.5" wheels. I live in Kentucky where, compared to states
+                            <p>I love mountain biking! I live in Kentucky where, compared to states
                             like California or Colorado, there aren't very many miles of trails to
                             ride. However, there are some local trails nearby that I love! I don't
                             get to ride much, but when I do, I get to relax and focus all of my
