--- a/CS316/ben-richey.html
+++ b/CS316/ben-richey.html
@@ -4,13 +4,14 @@
     <head>
         <meta charset="utf-8" />
         <title>Ben Richey</title>
+        <link rel="stylesheet" href="styles/stylesheet.css"/>
     </head>
     <body>
         <header>
             <h1>Ben Richey</h1>
             <figure>
-                <img src="images/headshot.PNG" alt="A picture of myself" title="Ben Richey Headshot"
-                width="300"/>
+                <img id="headshot" src="images/headshot.PNG" alt="A picture of myself" title="Ben Richey Headshot"
+                />
                 <figcaption>
                     <cite>Photo by <a href="https://www.morgansnellingsphotography.com">
                             Morgan Snellings</a>. Instagram:
@@ -23,10 +24,10 @@
             <details>
                 <summary><strong>My Resume</strong></summary>
                 <section class="page">
-                    <h2>Resume</h2>
+                    <h2 class="pageHeader">Resume</h2>
                     <hr>
                     <section id="about" class="subsection">
-                        <h3>Email: <a href="mailto:bbri226@g.uky.edu">bbri226@g.uky.edu</a> |
+                        <h3 class="secHeader">Email: <a href="mailto:bbri226@g.uky.edu">bbri226@g.uky.edu</a> |
                             <a href="https://www.linkedin.com/in/ben-richey-0b967a18a">LinkedIn</a>
                             | GPA: 3.765
                         </h3>
@@ -40,9 +41,9 @@
                     </section>
                     <hr>
                     <section id="experience" class="subsection">
-                        <h2>Experience</h2>
+                        <h2 class="secHeader">Experience</h2>
                         <section class="subfield">
-                            <h3>May 2020 to Present</h3>
+                            <h3 class="subHeader">May 2020 to Present</h3>
                             <h4>Co-Op Software Developer, Badger Technolgies/Jabil Inc.</h4>
                             <ul>
                                 <li>Robot Operating System (ROS) team developer for Marty the Robot:
@@ -56,7 +57,7 @@
                             </ul>
                         </section>
                         <section class="subfield">
-                            <h3>July 2019 to May 2020</h3>
+                            <h3 class="subHeader">July 2019 to May 2020</h3>
                             <h4>Co-Op Moderation Team Lead, Badger Technologies/Jabil Inc.</h4>
                             <ul>
                                 <li>Analyzed and corrected decisions made by AI</li>
@@ -70,8 +71,8 @@
                     </section>
                     <hr>
                     <section id="education" class="subsection">
-                        <h2>Education</h2>
-                        <h3>2019 to Present</h3>
+                        <h2 class="secHeader">Education</h2>
+                        <h3 class="subHeader">2019 to Present</h3>
                         <section id="bachelors" class="subfield">
                             <h4>Univ. of Kentucky College of Engineering Bachelor of Science in
                                 Computer Engineering</h4>
@@ -108,13 +109,14 @@
                     </section>
                     <hr>
                     <section id="skills" class="subsection">
-                        <h2>Skills</h2>
+                        <h2 class="secHeader">Skills</h2>
                         <ul>
                             <li>Programming:
                                 <ul>
                                     <li>Python</li>
                                     <li>C</li>
                                     <li>C++</li>
+                                    <li>MIPS Assembly</li>
                                     <li>ARM Assembly</li>
                                     <li>x86_64 Assembly</li>
                                     <li>Bash</li>
@@ -135,7 +137,7 @@
             <details>
                 <summary><strong>My Work</strong></summary>
                 <section class="page">
-                    <h2>Projects, Code, and Whatnot</h2>
+                    <h2 class="pageHeader">Projects, Code, and Whatnot</h2>
                     <hr>
                     <section class="subsection">
                         <h3><a href="https://github.com/BenRichey2">GitHub</a></h3>
@@ -145,12 +147,12 @@
             <details>
                 <summary><strong>My Interests</strong></summary>
                 <section class="page">
-                    <h2>Interests</h2>
+                    <h2 class="pageHeader">Interests</h2>
                     <hr>
                     <section id="professional" class="subsection">
-                        <h3>Professional Interests</h3>
+                        <h3 class="secHeader">Professional Interests</h3>
                         <section class="subfield">
-                            <h4>Robotics</h4>
+                            <h4 class="subHeader">Robotics</h4>
                             <p>I currently work for a robotics company, and my experience has given
                             me a passion for learning about autonomous navigation. This is a really
                             complex field which requires many layers of code to achieve this goal.
@@ -170,7 +172,7 @@
                             </p>
                         </section>
                         <section class="subfield">
-                            <h4>Medical Technology</h4>
+                            <h4 class="subHeader">Medical Technology</h4>
                             <p>As a follower of Christ, it's really important to me that what I do
                             helps people who need it. There are so many incredible opportunities in
                             the field of medicine for a person with computer hardware/software
@@ -189,9 +191,9 @@
                     </section>
                     <hr>
                     <section id="personal" class="subsection">
-                        <h3>Personal Interests</h3>
+                        <h3 class="secHeader">Personal Interests</h3>
                         <section class="subfield">
-                            <h4>Mountain Biking</h4>
+                            <h4 class="subHeader">Mountain Biking</h4>
                             <figure>
                                 <img src="images/MTB.PNG"
                                      alt="Me catching some air on an MTB trail." title="MTB Jump"
@@ -215,7 +217,7 @@
             <details>
                 <summary><strong>Contact Me!</strong></summary>
                 <section class="page">
-                    <h2>Contact</h2>
+                    <h2 class="pageHeader">Contact</h2>
                     <ul>
                         <li><p>
                             Email: <a href="mailto:bbri226@g.uky.edu">bbri226@g.uky.edu</a>
@@ -232,16 +234,16 @@
             <details>
                 <summary><strong>The Office Quote of the Day</strong></summary>
                 <section class="page">
-                    <h2>The Office Quote of the Day</h2>
+                    <h2 class="pageHeader">The Office Quote of the Day</h2>
                     <p class="about">The Office is my favorite TV show! Here's a daily quote that is
                                        one of my favorites. Eventually I will turn this into a random
                                        The Office quote generator which will select a random quote from
                                        a list of my favorites.</p>
-                    <figure class="quote">
-                        <p>"I never smile if I can help it. Showing one's teeth is a submission signal
+                    <figure>
+                        <p id="quote">"I never smile if I can help it. Showing one's teeth is a submission signal
                         in primates. When someone smiles at me, all I see is a chimpanzee begging for
                         its life."<p>
-                        <figcaption>-Dwight Schrute, The Office, Season 2 Episode 21</figcaption>
+                        <figcaption>- Dwight Schrute, The Office, Season 2 Episode 21</figcaption>
                     </figure>
                 </section>
             </details>
