--- a/CS316/ben-richey.html
+++ b/CS316/ben-richey.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <h1>Ben Richey</h1>
-            <figure>
+            <figure id="profilePic">
                 <img id="headshot" src="images/headshot.PNG" alt="A picture of myself" title="Ben Richey Headshot"
                 />
                 <figcaption>
