Add CSS to home page and resume page
Added styling to home page and resume page. Also fixed html syntax error
in report page.

CS316 Project 4

--- a/CS316/project4/pages/myInterests.html
+++ b/CS316/project4/pages/myInterests.html
@@ -72,6 +72,7 @@
                         devices are, there is also still a lot of room for improvement and I
                         would love the opportunity to aid in this.
                         </p>
+                    </section>
                 </section>
                 <hr>
                 <section id="personal" class="subsection">
