--- a/CS316/project4/pages/resume.html
+++ b/CS316/project4/pages/resume.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Ben Richey</title>
-        <!-- <link rel="stylesheet" href="../styles/stylesheet.css"/> -->
+        <link rel="stylesheet" href="../styles/constants.css"/>
     </head>
     <body>
         <header>
