Add popup thumbnail and transition effect
I added a popup thumbnail image only on the home page and a transition
effect on the navigation menu. I'm not sure that I love these changes,
but I added them to meet requirements for a project.

CS316 Project 4

--- a/CS316/project4/pages/ben-richey.html
+++ b/CS316/project4/pages/ben-richey.html
@@ -10,14 +10,18 @@
     <body>
         <header>
             <h1>Ben Richey</h1>
-            <figure id="profilePic">
+            <figure class="thumbnail" id="profilePic">
                 <img id="headshot" src="../images/headshot.PNG" alt="A picture of myself" title="Ben Richey Headshot"
                 />
-                <figcaption>
+                <figcaption class="popup">
+                    <div class="showCaption">
+                    <img id="biggerHeadshot" src="../images/headshot.PNG" alt="A picture of myself" title="Ben Richey Headshot"
+                    />
                     <cite>Photo by <a href="https://www.morgansnellingsphotography.com">
                             Morgan Snellings</a>. Instagram:
                         <a href="https://www.instagram.com/morgansnellingsphotography">
                         @morgansnellingsphotography</a></cite>
+                    </div>
                 </figcaption>
             </figure>
         </header>
