Add light and dark theme options
Use javascript to allow the user to change the color theme for each page
between light and dark options.

CS316 Project 5

--- a/CS316/project5/pages/myInterests.html
+++ b/CS316/project5/pages/myInterests.html
@@ -10,6 +10,10 @@
     <body>
         <header>
             <h1>Ben Richey</h1>
+            <div class="headerContent">
+                <form id="theme">
+                    <button id="themeBttn">Light Mode</button>
+                </form>
             <figure id="profilePic">
                 <img id="headshot" src="../images/headshot.PNG" alt="A picture of myself" title="Ben Richey Headshot"
                 />
@@ -20,6 +24,7 @@
                         @morgansnellingsphotography</a></cite>
                 </figcaption>
             </figure>
+            </div>
         </header>
         <main>
             <nav>
@@ -114,4 +119,5 @@
             </section>
         </main>
     </body>
+    <script type="text/javascript" src="../scripts/theme.js"></script>
 </html>
