--- a/CS316/project5/pages/theOfficeQuote.html
+++ b/CS316/project5/pages/theOfficeQuote.html
@@ -10,16 +10,21 @@
     <body>
         <header>
             <h1>Ben Richey</h1>
-            <figure id="profilePic">
-                <img id="headshot" src="../images/headshot.PNG" alt="A picture of myself" title="Ben Richey Headshot"
-                />
-                <figcaption>
-                    <cite>Photo by <a href="https://www.morgansnellingsphotography.com">
-                            Morgan Snellings</a>. Instagram:
-                        <a href="https://www.instagram.com/morgansnellingsphotography">
-                        @morgansnellingsphotography</a></cite>
-                </figcaption>
-            </figure>
+            <div class="headerContent">
+                <form id="theme">
+                    <button id="themeBttn">Light Mode</button>
+                </form>
+                <figure id="profilePic">
+                    <img id="headshot" src="../images/headshot.PNG" alt="A picture of myself" title="Ben Richey Headshot"
+                    />
+                    <figcaption>
+                        <cite>Photo by <a href="https://www.morgansnellingsphotography.com">
+                                Morgan Snellings</a>. Instagram:
+                            <a href="https://www.instagram.com/morgansnellingsphotography">
+                            @morgansnellingsphotography</a></cite>
+                    </figcaption>
+                </figure>
+            </div>
         </header>
         <main>
             <nav>
@@ -60,4 +65,5 @@
             </section>
         </main>
     </body>
+    <script type="text/javascript" src="../scripts/theme.js"></script>
 </html>
