Add content load animations
Added an animation so it looks like the content is being loaded top-down
each time you open the page or change the theme.

CS316 Project 5

--- a/CS316/project5/pages/ben-richey.html
+++ b/CS316/project5/pages/ben-richey.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width"/>
         <title>Ben Richey</title>
         <link rel="stylesheet" href="../styles/constants.css"/>
+        <script src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
     </head>
     <body>
         <header>
