--- a/CS316/project5/pages/myInterests.html
+++ b/CS316/project5/pages/myInterests.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width"/>
         <title>Ben Richey</title>
         <link rel="stylesheet" href="../styles/constants.css"/>
+        <script src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
     </head>
     <body>
         <header>
