Add dynamic content based on user selections
Added a field to input what state and county the user is from. Once the
state is selected, the counties for that state are dynamically loaded
for the user to select which county they live in. Only works for U.S.
states and counties.

CS316 Project 5

--- a/CS316/project5/pages/report.html
+++ b/CS316/project5/pages/report.html
@@ -52,6 +52,14 @@
                            pattern="[0-9][0-9][0-9]-[0-9][0-9][0-9]-[0-9][0-9][0-9][0-9]"/><br>
                     <label>Email</label>
                     <input type="email" name="email" placeholder="john.doe@gmail.com"/><br>
+                    <label>Where are you from? (U.S. only)</label><br>
+                    <label>State</label>
+                    <select id="state" name="state">
+                    </select><br>
+                    <label>County</label>
+                    <select id="county" name="county">
+                    </select>
+                    <br>
                     <input type="submit"/>
                     <input type="reset"/>
                     </fieldset>
@@ -133,4 +141,5 @@
         </main>
     </body>
     <script type="text/javascript" src="../scripts/theme.js"></script>
+    <script type ="text/javascript" src="../scripts/whereAreYouFrom.js"></script>
 </html>
