--- a/CS316/project6/pages/resume.html
+++ b/CS316/project6/pages/resume.html
@@ -29,12 +29,12 @@
         </header>
         <main>
             <nav>
-                <a href="./ben-richey.html"><strong>Home</strong></a>
-                <a href="./resume.html"><strong>My Resume</strong></a>
-                <a href="./myWork.html"><strong>My Work</strong></a>
-                <a href="./myInterests.html"><strong>My Interests</strong></a>
-                <a href="./theOfficeQuote.html"><strong>The Office Quote of the Day</strong></a>
-                <a href="./report.html"><strong>Report Bugs or Feature Requests</strong></a>
+                <a href="/pages/ben-richey.html"><strong>Home</strong></a>
+                <a href="/pages/resume.html"><strong>My Resume</strong></a>
+                <a href="/pages/myWork.html"><strong>My Work</strong></a>
+                <a href="/pages/myInterests.html"><strong>My Interests</strong></a>
+                <a href="/pages/theOfficeQuote.php"><strong>The Office Quote of the Day</strong></a>
+                <a href="/pages/report.html"><strong>Report Bugs or Feature Requests</strong></a>
             </nav>
             <section class="content">
                 <h2 class="contentHeader">Resume</h2>
